[kernel 5.4-rc7][amdgpu] kmemleak reports various leaks
@ernsteiswuerfel
Submitted by ernsteiswuerfel Assigned to Default DRI bug account
Link to original bug (#112302)
Description
Created attachment 145972
cat /sys/kernel/debug/kmemleak
[ 1306.389652] kmemleak: 28 new suspected memory leaks (see /sys/kernel/debug/kmemleak)
Running X I get various kmemleak dumps for amdgpu:
[...]
unreferenced object 0xffffa2501f3374c0 (size 208):
comm "Xorg", pid 694, jiffies 4294885609 (age 1870.427s)
hex dump (first 32 bytes):
50 75 33 1f 50 a2 ff ff a0 41 47 c0 ff ff ff ff Pu3.P....AG.....
b6 d7 06 a0 06 00 00 00 48 fe aa 8c b5 b1 ff ff ........H.......
backtrace:
[<00000000502b8475>
] drm_sched_fence_create+0x1d/0xc0 [gpu_sched]
[<0000000067f89939>
] drm_sched_job_init+0x5b/0xa0 [gpu_sched]
[<0000000097e803db>
] amdgpu_job_submit+0x1e/0x90 [amdgpu]
[<000000008af66624>
] amdgpu_copy_buffer+0x1ab/0x290 [amdgpu]
[<000000005723dc17>
] amdgpu_ttm_copy_mem_to_mem+0x25b/0x540 [amdgpu]
[<000000009372cf45>
] amdgpu_move_blit.constprop.0+0x85/0x1b0 [amdgpu]
[<00000000b09834ab>
] amdgpu_bo_move+0x168/0x2b0 [amdgpu]
[<000000009f1ae718>
] ttm_bo_handle_move_mem+0x126/0x5c0 [ttm]
[<00000000d0c0e30f>
] ttm_bo_validate+0x174/0x1b0 [ttm]
[<00000000812e63d8>
] amdgpu_bo_fault_reserve_notify+0xe2/0x130 [amdgpu]
[<00000000340ebb51>
] ttm_bo_vm_fault+0xa7/0x650 [ttm]
[<00000000a9630d5e>
] __do_fault+0x31/0xf0
[<000000008cecfe93>
] __handle_mm_fault+0xccc/0x1390
[<00000000984b2f55>
] handle_mm_fault+0x15b/0x2f0
[<0000000053ca6a37>
] __do_page_fault+0x1a2/0x420
[<00000000c546a67a>
] page_fault+0x31/0x40
unreferenced object 0xffffa24c4471b040 (size 72):
comm "sdma0", pid 402, jiffies 4294885609 (age 1870.427s)
hex dump (first 32 bytes):
a0 c7 36 59 4c a2 ff ff e0 95 fd c0 ff ff ff ff ..6YL...........
a4 2b 08 a0 06 00 00 00 58 e4 2a 61 50 a2 ff ff .+......X.*aP...
backtrace:
[<0000000078aa5208>
] amdgpu_fence_emit+0x2b/0x270 [amdgpu]
[<00000000a223cd76>
] amdgpu_ib_schedule+0x311/0x540 [amdgpu]
[<000000004db3d964>
] amdgpu_job_run+0xfc/0x1e0 [amdgpu]
[<00000000bfb92cc3>
] drm_sched_main+0xf7/0x2e0 [gpu_sched]
[<00000000a857f89f>
] kthread+0xf6/0x130
[<0000000046d81882>
] ret_from_fork+0x27/0x50
[...]
Attachment 145972, "cat /sys/kernel/debug/kmemleak":
kmemleak.txt